--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -22,30 +22,30 @@ jobs:
         packages/twenty-front/**
         packages/twenty-ui/**
         packages/twenty-shared/**
-  front-sb-build:
-    needs: [changed-files-check]
-    if: needs.changed-files-check.outputs.any_changed == 'true'
-    timeout-minutes: 30
-    runs-on: depot-ubuntu-24.04-8
-    env:
-      REACT_APP_SERVER_BASE_URL: http://localhost:3000
-    steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.11.0
-        with:
-          access_token: ${{ github.token }}
-      - name: Fetch local actions
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Install dependencies
-        uses: ./.github/workflows/actions/yarn-install
-      - name: Diagnostic disk space issue
-        run: df -h
-      - name: Front / Write .env
-        run: npx nx reset:env twenty-front
-      - name: Front / Build storybook
-        run: npx nx storybook:build twenty-front
+  # front-sb-build:
+  #   needs: [changed-files-check]
+  #   if: needs.changed-files-check.outputs.any_changed == 'true'
+  #   timeout-minutes: 30
+  #   runs-on: depot-ubuntu-24.04-8
+  #   env:
+  #     REACT_APP_SERVER_BASE_URL: http://localhost:3000
+  #   steps:
+  #     - name: Cancel Previous Runs
+  #       uses: styfle/cancel-workflow-action@0.11.0
+  #       with:
+  #         access_token: ${{ github.token }}
+  #     - name: Fetch local actions
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Install dependencies
+  #       uses: ./.github/workflows/actions/yarn-install
+  #     - name: Diagnostic disk space issue
+  #       run: df -h
+  #     - name: Front / Write .env
+  #       run: npx nx reset:env twenty-front
+  #     - name: Front / Build storybook
+  #       run: npx nx storybook:build twenty-front
       # - name: Save storybook build cache
       #   uses: ./.github/workflows/actions/save-cache
       #   with:
@@ -77,6 +77,8 @@ jobs:
       #     key: ${{ steps.restore-storybook-build-cache.outputs.cache-primary-key  }}
       - name: Front / Write .env
         run: npx nx reset:env twenty-front
+      - name: Front / Build storybook
+        run: npx nx storybook:build twenty-front
       - name: Run storybook tests
         run: npx nx storybook:serve-and-test:static twenty-front --shard=${{ matrix.shard }}/${{ env.SHARD_COUNTER }} --checkCoverage=false **/SettingsAccountsCalendarChannelsGeneral.stories.tsx
       - name: Rename coverage file
