--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -53,6 +53,8 @@ jobs:
   front-sb-test:
     timeout-minutes: 30
     runs-on: depot-ubuntu-24.04-8
+    needs: changed-files-check
+    if: needs.changed-files-check.outputs.any_changed == 'true'
     # needs: front-sb-build
     strategy:
       fail-fast: false
