Put back all shards and scopes to have all errors in CI

--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -23,7 +23,7 @@ jobs:
   #       packages/twenty-ui/**
   #       packages/twenty-shared/**
   # front-sb-build:
-  #   needs: [changed-files-check]
+  #   needs: changed-files-check
   #   if: needs.changed-files-check.outputs.any_changed == 'true'
   #   timeout-minutes: 30
   #   runs-on: depot-ubuntu-24.04-8
@@ -59,10 +59,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shard: [1]
-        # storybook_scope: [modules, pages, performance]
+        shard: [1, 2, 3, 4]
+        storybook_scope: [modules, pages, performance]
     env:
-      SHARD_COUNTER: 1
+      SHARD_COUNTER: 4
       REACT_APP_SERVER_BASE_URL: http://localhost:3000
     steps:
       - name: Fetch local actions
@@ -76,20 +76,20 @@ jobs:
       # - name: Restore storybook build cache
       #   uses: ./.github/workflows/actions/restore-cache
       #   with:
-      #     key: ${{ steps.restore-storybook-build-cache.outputs.cache-primary-key  }}
+      #     key: ${{ env.STORYBOOK_BUILD_CACHE_KEY }}
       - name: Front / Write .env
         run: npx nx reset:env twenty-front
       - name: Front / Build storybook
         run: npx nx storybook:build twenty-front
       - name: Run storybook tests
-        run: npx nx storybook:serve-and-test:static twenty-front --checkCoverage=false
+        run: npx nx storybook:serve-and-test:static twenty-front --configuration=${{ matrix.storybook_scope }} --shard=${{ matrix.shard }}/${{ env.SHARD_COUNTER }} --checkCoverage=false
       - name: Rename coverage file
         run: mv packages/twenty-front/coverage/storybook/coverage-storybook.json packages/twenty-front/coverage/storybook/coverage-shard-${{matrix.shard}}.json
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
           retention-days: 1
-          name: coverage-artifacts-${{ github.run_id }}-${{ matrix.shard }}
+          name: coverage-artifacts-${{ matrix.storybook_scope }}-${{ github.run_id }}-${{ matrix.shard }}
           path: packages/twenty-front/coverage/storybook/coverage-shard-${{matrix.shard}}.json
   # merge-reports-and-check-coverage:
   #   timeout-minutes: 30
