--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -78,6 +78,7 @@
     "react-datepicker": "^6.7.1",
     "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.11",
+    "react-grid-layout": "^1.5.2",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.1",
     "react-hotkeys-hook": "^4.4.4",
@@ -104,6 +105,7 @@
     "@types/apollo-upload-client": "^17.0.2",
     "@types/file-saver": "^2.0.7",
     "@types/js-cookie": "^3.0.3",
+    "@types/react-grid-layout": "^1",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "@typescript-eslint/utils": "^8.39.0",
