--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "7.26.9",
     "@blocknote/server-util": "^0.31.1",
     "@clickhouse/client": "^1.11.0",
+    "@dagrejs/dagre": "^1.1.2",
     "@envelop/core": "4.0.3",
     "@envelop/on-resolve": "4.1.0",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
