--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -159,6 +159,7 @@
     "passport-google-oauth20": "2.0.0",
     "passport-jwt": "4.0.1",
     "passport-microsoft": "2.1.0",
+    "path-to-regexp": "^8.2.0",
     "pg": "8.12.0",
     "pg-boss": "9.0.3",
     "planer": "1.2.0",
