--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "microdiff": "^1.3.2",
     "moize": "^6.1.6",
     "patch-package": "^8.0.0",
+    "pg": "^8.16.3",
     "planer": "^1.2.0",
     "pluralize": "^8.0.0",
     "react": "^18.2.0",
@@ -58,6 +59,7 @@
     "react-router-dom": "^6.4.4",
     "react-tooltip": "^5.13.1",
     "recoil": "^0.7.7",
+    "reflect-metadata": "^0.2.2",
     "rehype-slug": "^6.0.0",
     "remark-behead": "^3.1.0",
     "remark-gfm": "^3.0.1",
@@ -68,6 +70,7 @@
     "ts-key-enum": "^2.0.12",
     "tslib": "^2.8.1",
     "type-fest": "4.10.1",
+    "typeorm": "^0.3.26",
     "typescript": "5.9.2",
     "uuid": "^9.0.0",
     "vite-tsconfig-paths": "^4.2.1",
@@ -143,7 +146,7 @@
     "@types/luxon": "^3.3.0",
     "@types/mailparser": "^3.4.6",
     "@types/ms": "^0.7.31",
-    "@types/node": "^24.0.0",
+    "@types/node": "^24.3.0",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-jwt": "^3.0.8",
     "@types/passport-microsoft": "^2.1.0",
@@ -163,6 +166,7 @@
     "concurrently": "^8.2.2",
     "cross-var": "^1.1.0",
     "danger": "^11.3.0",
+    "dotenv": "^17.2.1",
     "dotenv-cli": "^7.2.1",
     "esbuild": "^0.23.0",
     "eslint": "^9.32.0",
@@ -202,7 +206,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "tsx": "^4.17.0",
+    "tsx": "^4.20.5",
     "vite": "^7.0.0",
     "vite-plugin-checker": "^0.10.2",
     "vite-plugin-cjs-interop": "^2.2.0",
