--- a/packages/twenty-front/.env.example
+++ b/packages/twenty-front/.env.example
@@ -12,4 +12,4 @@ VITE_DISABLE_ESLINT_CHECKER=true
 # VITE_HOST=localhost.com
 # SSL_KEY_PATH="./certs/your-cert.key"
 # SSL_CERT_PATH="./certs/your-cert.crt"
-# IS_DEBUG_MODE=false
+# IS_DEBUG_MODE=falseVITE_DISABLE_TYPESCRIPT_CHECKER=true
