--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -1,12 +1,10 @@
 # Use this for local setup
 NODE_ENV=development
-PG_DATABASE_URL=postgres://postgres:postgres@localhost:5432/default
+PG_DATABASE_URL=postgres://twenty:twenty@localhost:5432/twenty_core
 REDIS_URL=redis://localhost:6379
 APP_SECRET=replace_me_with_a_random_string
 SIGN_IN_PREFILLED=true
-
-FRONTEND_URL=http://localhost:3001
-
+FRONTEND_URL=http://localhost:3000
 # ———————— Optional ————————
 # PORT=3000
 # ACCESS_TOKEN_EXPIRES_IN=30m
@@ -79,3 +77,4 @@ FRONTEND_URL=http://localhost:3001
 # IS_CONFIG_VARIABLES_IN_DB_ENABLED=false
 # ANALYTICS_ENABLED=
 # CLICKHOUSE_URL=http://default:clickhousePassword@localhost:8123/twenty
+PG_SSL_ALLOW_SELF_SIGNED=false
