--- a/packages/twenty-ui/project.json
+++ b/packages/twenty-ui/project.json
@@ -8,6 +8,11 @@
   ],
   "targets": {
     "build": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "packages/twenty-ui",
+        "command": "yarn build"
+      },
       "dependsOn": [
         "^build",
         "generateBarrels"
@@ -53,63 +58,6 @@
       ],
       "options": {
         "command": "tsx {projectRoot}/scripts/generateBarrels.ts"
-      }
-    },
-    "clean": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "rimraf {projectRoot}/dist"
-      }
-    },
-    "lint": {
-      "options": {
-        "lintFilePatterns": [
-          "{projectRoot}/src/**/*.{ts,tsx,json}",
-          "{projectRoot}/package.json"
-        ]
-      },
-      "configurations": {
-        "fix": {}
-      }
-    },
-    "fmt": {
-      "options": {
-        "files": "src"
-      },
-      "configurations": {
-        "fix": {}
-      }
-    },
-    "test": {},
-    "typecheck": {},
-    "storybook:build": {
-      "configurations": {
-        "test": {}
-      }
-    },
-    "storybook:serve:dev": {
-      "options": {
-        "port": 6007
-      }
-    },
-    "storybook:serve:static": {
-      "options": {
-        "buildTarget": "twenty-ui:storybook:build",
-        "port": 6007
-      },
-      "configurations": {
-        "test": {}
-      }
-    },
-    "storybook:coverage": {},
-    "storybook:test": {
-      "options": {
-        "port": 6007
-      }
-    },
-    "storybook:serve-and-test:static": {
-      "options": {
-        "port": 6007
       }
     }
   }
