--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "archiver": "^7.0.1",
     "danger-plugin-todos": "^1.3.1",
     "date-fns": "^2.30.0",
+    "date-fns-jalali": "^4.1.0-0",
     "date-fns-tz": "^2.0.0",
     "deep-equal": "^2.2.2",
     "dotenv-cli": "^7.2.1",
