--- a/packages/twenty-shared/package.json
+++ b/packages/twenty-shared/package.json
@@ -28,6 +28,8 @@
     "@sniptt/guards": "^0.2.0",
     "handlebars": "^4.7.8",
     "libphonenumber-js": "^1.10.26",
+    "qs": "^6.11.2",
+    "react-router-dom": "^6.4.4",
     "zod": "3.23.8"
   },
   "exports": {
