--- a/package.json
+++ b/package.json
@@ -122,8 +122,10 @@
     "@types/chrome": "^0.0.267",
     "@types/deep-equal": "^1.0.1",
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^11.0.4",
     "@types/graphql-fields": "^1.3.6",
     "@types/imapflow": "^1.0.21",
+    "@types/inquirer": "^9.0.9",
     "@types/jest": "^30.0.0",
     "@types/lodash.camelcase": "^4.3.7",
     "@types/lodash.compact": "^3.0.9",
@@ -242,6 +244,8 @@
       "packages/twenty-website",
       "packages/twenty-e2e-testing",
       "packages/twenty-shared",
+      "packages/twenty-apps",
+      "packages/twenty-cli",
       "tools/eslint-rules"
     ]
   }
