--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -87,6 +87,7 @@
     "cache-manager": "^5.4.0",
     "cache-manager-redis-yet": "^4.1.2",
     "chalk": "4.1.2",
+    "chokidar": "^4.0.3",
     "class-transformer": "0.5.1",
     "class-validator": "patch:class-validator@0.14.0#./patches/class-validator+0.14.0.patch",
     "class-validator-jsonschema": "^5.0.2",
@@ -149,7 +150,7 @@
     "monaco-editor": "^0.51.0",
     "monaco-editor-auto-typings": "^0.4.5",
     "ms": "2.1.3",
-    "nest-commander": "3.14.0",
+    "nest-commander": "^3.19.1",
     "node-ical": "^0.20.1",
     "nodemailer": "6.9.14",
     "openapi-types": "12.1.3",
@@ -197,6 +198,7 @@
     "@nx/js": "21.3.11",
     "@types/babel__preset-env": "7.10.0",
     "@types/bytes": "^3.1.1",
+    "@types/chokidar": "^2.1.7",
     "@types/dompurify": "^3.0.5",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.18.0",
