feat: address PR comments and add CI/testing infrastructure
- Change universalIdentifier to standardId across application entities
- Remove icon field from application entity
- Fix unique constraint to use standardId instead of label
- Regenerate migration from scratch using TypeORM command
- Add GitHub Action workflow for CLI package (ci-cli.yaml)
- Set up Jest configuration and testing for CLI package
- Add comprehensive tests for app-template utility (7 test cases)
- Remove complex validate-apps.ts script and replace with simple boilerplate test
- Clean up dependencies and configurations
- Update template files to use standardId consistently

All lint, typecheck, and test targets now pass for CLI and apps packages.

--- a/packages/twenty-apps/_template/twenty-app.json
+++ b/packages/twenty-apps/_template/twenty-app.json
@@ -1,5 +1,5 @@
 {
-  "universalIdentifier": "com.yourcompany.your-app-name",
+  "standardId": "com.yourcompany.your-app-name",
   "label": "Your App Name",
   "description": "A brief description of what your application does",
   "version": "1.0.0",
@@ -7,7 +7,7 @@
   
   "agents": [
     {
-      "universalIdentifier": "com.yourcompany.your-app-name.assistant",
+      "standardId": "com.yourcompany.your-app-name.assistant",
       "name": "assistant",
       "label": "App Assistant",
       "description": "AI assistant for your application",
