--- a/packages/twenty-apps/hello-world/twenty-app.json
+++ b/packages/twenty-apps/hello-world/twenty-app.json
@@ -1,5 +1,5 @@
 {
-  "universalIdentifier": "550e8400-e29b-41d4-a716-446655440000",
+  "standardId": "550e8400-e29b-41d4-a716-446655440000",
   "label": "Hello World 👋",
   "description": "A friendly AI companion that greets users and helps them get started with Twenty CRM",
   "icon": "🌟",
