--- a/packages/twenty-cli/package.json
+++ b/packages/twenty-cli/package.json
@@ -34,7 +34,9 @@
   "devDependencies": {
     "@types/fs-extra": "^11.0.0",
     "@types/inquirer": "^9.0.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "jest": "^29.5.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0"
   },
