--- a/packages/twenty-cli/project.json
+++ b/packages/twenty-cli/project.json
@@ -41,7 +41,10 @@
         "maxWarnings": 0
       },
       "configurations": {
-        "ci": { "lintFilePatterns": ["{projectRoot}/**/*.{ts,json}"] },
+        "ci": { 
+          "lintFilePatterns": ["{projectRoot}/src/**/*.{ts,json}"],
+          "maxWarnings": 0
+        },
         "fix": {}
       }
     },
@@ -50,6 +53,13 @@
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "{projectRoot}/jest.config.mjs"
+      },
+      "configurations": {
+        "ci": {
+          "ci": true,
+          "coverage": true,
+          "watchAll": false
+        }
       }
     }
   }
