--- a/packages/twenty-cli/package.json
+++ b/packages/twenty-cli/package.json
@@ -20,6 +20,8 @@
   ],
   "license": "AGPL-3.0",
   "dependencies": {
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "axios": "^1.6.0",
     "chalk": "^5.3.0",
     "chokidar": "^4.0.0",
@@ -27,6 +29,7 @@
     "dotenv": "^16.4.0",
     "fs-extra": "^11.2.0",
     "inquirer": "^10.0.0",
+    "jsonc-parser": "^3.2.0",
     "ora": "^8.0.0",
     "yaml": "^2.4.0",
     "zod": "^3.22.0"
