feat(cli): migrate to convention-based agent discovery
- Replace $ref system with automatic folder-based discovery
- Agents are now automatically discovered from agents/ folder
- Simplified app manifest structure (no agents array needed)
- Updated JSON schemas to support new convention
- Added comprehensive schema validation with AJV
- Enhanced developer experience with $schema references
- All tests passing with new convention-based approach

Breaking Changes:
- App manifests no longer need agents array
- Agents are discovered from agents/ folder by convention
- Removed $ref support in favor of simpler folder structure

Benefits:
- Simpler mental model for developers
- No manual bookkeeping of agent references
- Extensible for future folders (/functions, /workflows)
- Better IDE support with JSON Schema validation

--- a/packages/twenty-apps/hello-world/twenty-app.jsonc
+++ b/packages/twenty-apps/hello-world/twenty-app.jsonc
@@ -6,10 +6,6 @@
   "label": "Hello World 👋",
   "description": "A friendly AI companion that greets users and helps them get started with Twenty CRM",
   "icon": "🌟",
-  "version": "1.0.0",
-  "agents": [
-    {
-      "$ref": "agents/hello-world-assistant.jsonc"
-    }
-  ]
+  "version": "1.0.0"
+  // Agents are automatically discovered from the agents/ folder
 }
