feat: implement license management features and refactor related components
- Added LICENSE_API_URL to .env.example for license API integration.
- Introduced licenseStatus field in MKT_ORDER_FIELD_IDS and updated MktOrderWorkspaceEntity to track license status.
- Removed deprecated MktLicenseApiService and refactored imports in related modules.
- Enhanced LicenseGenerationJob to handle multiple licenses for order items and updated logging for better traceability.
- Updated MKT_LICENSE_STATUS in order-status.constants to manage license states effectively.
- Improved code structure and formatting across various files for consistency.

--- a/packages/twenty-server/.env.example
+++ b/packages/twenty-server/.env.example
@@ -14,6 +14,11 @@ S_INVOICE_AUTHORIZATION='Basic 123456abcd123='
 FILE_DOWNLOAD_EXPIRES=3600
 FILE_DOWNLOAD_SECRET='default-secret-key'
 
+#license
+LICENSE_API_URL='https://api.license-example.com/licenses'
+
+ORDER_OPTIMISTIC_LOCKING_ENABLED='false'
+
 # ———————— Optional ————————
 # PORT=3000
 # ACCESS_TOKEN_EXPIRES_IN=30m
