--- a/packages/twenty-shared/project.json
+++ b/packages/twenty-shared/project.json
@@ -16,6 +16,8 @@
         "{projectRoot}/dist",
         "{projectRoot}/constants/package.json",
         "{projectRoot}/constants/dist",
+        "{projectRoot}/mutations/package.json",
+        "{projectRoot}/mutations/dist",
         "{projectRoot}/testing/package.json",
         "{projectRoot}/testing/dist",
         "{projectRoot}/translations/package.json",
