--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@floating-ui/react": "^0.24.3",
     "@linaria/core": "^6.2.0",
     "@linaria/react": "^6.2.1",
-    "@react-email/components": "0.0.35",
-    "@react-email/render": "0.0.17",
+    "@react-email/components": "^0.5.3",
+    "@react-email/render": "^1.2.3",
     "@sentry/profiling-node": "^9.26.0",
     "@sentry/react": "^9.26.0",
     "@sniptt/guards": "^0.2.0",
