--- a/packages/twenty-emails/package.json
+++ b/packages/twenty-emails/package.json
@@ -21,6 +21,7 @@
     "@lingui/cli": "^5.1.2",
     "@lingui/swc-plugin": "^5.6.0",
     "@lingui/vite-plugin": "^5.1.2",
+    "@tiptap/core": "^3.4.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "react-email": "4.0.3"
