--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -19,6 +19,7 @@
     "@ai-sdk/openai": "^1.3.22",
     "@aws-sdk/client-lambda": "3.825.0",
     "@aws-sdk/client-s3": "3.825.0",
+    "@aws-sdk/client-sesv2": "^3.888.0",
     "@aws-sdk/client-sts": "3.825.0",
     "@aws-sdk/credential-providers": "3.825.0",
     "@babel/preset-env": "7.26.9",
