--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -58,6 +58,7 @@
     "@tiptap/extension-hard-break": "^3.4.2",
     "@tiptap/extension-heading": "^3.4.2",
     "@tiptap/extension-italic": "^3.4.2",
+    "@tiptap/extension-link": "^3.4.2",
     "@tiptap/extension-paragraph": "^3.4.2",
     "@tiptap/extension-strike": "^3.4.2",
     "@tiptap/extension-text": "^3.4.2",
