feature #146: add-endpoint-organization - add organization

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /.idea
 **/**/node_modules/
 .cache
+.kiro
 
 # yarn is the recommended package manager across the project
 **/**/.package-lock.json
@@ -47,3 +48,5 @@ dump.rdb
 
 mcp.json
 GEMINI.md
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
