--- a/packages/twenty-shared/package.json
+++ b/packages/twenty-shared/package.json
@@ -30,7 +30,7 @@
     "libphonenumber-js": "^1.10.26",
     "qs": "^6.11.2",
     "react-router-dom": "^6.4.4",
-    "zod": "^4.1.9"
+    "zod": "3.23.8"
   },
   "exports": {
     ".": {
