wip: resizable image

--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -57,6 +57,7 @@
     "@tiptap/extension-document": "^3.4.2",
     "@tiptap/extension-hard-break": "^3.4.2",
     "@tiptap/extension-heading": "^3.4.2",
+    "@tiptap/extension-image": "^3.4.4",
     "@tiptap/extension-italic": "^3.4.2",
     "@tiptap/extension-link": "^3.4.2",
     "@tiptap/extension-paragraph": "^3.4.2",
