--- a/.github/workflows/ci-emails.yaml
+++ b/.github/workflows/ci-emails.yaml
@@ -52,7 +52,7 @@ jobs:
   ci-emails-status-check:
     if: always() && !cancelled()
     timeout-minutes: 5
-    runs-on: depot-ubuntu-24.04-8
+    runs-on: ubuntu-latest
     needs: [changed-files-check, emails-test]
     steps:
       - name: Fail job if any needs failed
