refactor(ai-types): consolidate and enhance type definitions
- Merged and reorganized type imports across various components to utilize a centralized `twenty-shared/ai` module.
- Introduced new type definitions for `ErrorEvent`, `ReasoningDeltaEvent`, `StreamEvent`, `TextBlock`, `TextDeltaEvent`, `ToolCallEvent`, `ToolEvent`, and `ToolResultEvent` for improved clarity and maintainability.
- Refactored utility functions for parsing streams to enhance event handling and streamline the processing of incoming data.
- Updated components to leverage the new type structure, ensuring consistent event handling and improved code organization.

--- a/packages/twenty-shared/project.json
+++ b/packages/twenty-shared/project.json
@@ -14,6 +14,8 @@
       ],
       "outputs": [
         "{projectRoot}/dist",
+        "{projectRoot}/ai/package.json",
+        "{projectRoot}/ai/dist",
         "{projectRoot}/constants/package.json",
         "{projectRoot}/constants/dist",
         "{projectRoot}/testing/package.json",
