--- a/packages/twenty-shared/package.json
+++ b/packages/twenty-shared/package.json
@@ -38,6 +38,11 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
     },
+    "./ai": {
+      "types": "./dist/ai/index.d.ts",
+      "import": "./dist/ai.mjs",
+      "require": "./dist/ai.cjs"
+    },
     "./constants": {
       "types": "./dist/constants/index.d.ts",
       "import": "./dist/constants.mjs",
@@ -76,6 +81,7 @@
   },
   "files": [
     "dist",
+    "ai",
     "constants",
     "testing",
     "translations",
@@ -86,6 +92,9 @@
   ],
   "typesVersions": {
     "*": {
+      "ai": [
+        "dist/ai/index.d.ts"
+      ],
       "constants": [
         "dist/constants/index.d.ts"
       ],
