feat: rich text email body (#14482)
Co-authored-by: Raphaël Bosi <71827178+bosiraphael@users.noreply.github.com>
Co-authored-by: Félix Malfait <felix.malfait@gmail.com>
Co-authored-by: Félix Malfait <felix@twenty.com>

--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -53,10 +53,17 @@
     "@react-pdf/renderer": "^4.1.6",
     "@scalar/api-reference-react": "^0.4.36",
     "@tiptap/core": "^3.4.2",
+    "@tiptap/extension-bold": "^3.4.2",
     "@tiptap/extension-document": "^3.4.2",
     "@tiptap/extension-hard-break": "^3.4.2",
+    "@tiptap/extension-heading": "^3.4.2",
+    "@tiptap/extension-image": "^3.4.4",
+    "@tiptap/extension-italic": "^3.4.2",
+    "@tiptap/extension-link": "^3.4.2",
     "@tiptap/extension-paragraph": "^3.4.2",
+    "@tiptap/extension-strike": "^3.4.2",
     "@tiptap/extension-text": "^3.4.2",
+    "@tiptap/extension-underline": "^3.4.2",
     "@tiptap/extensions": "^3.4.2",
     "@tiptap/react": "^3.4.2",
     "@xyflow/react": "^12.4.2",
