--- a/.github/workflows/ci-breaking-changes.yaml
+++ b/.github/workflows/ci-breaking-changes.yaml
@@ -257,13 +257,16 @@ jobs:
         run: |
           git stash
           git checkout origin/main
-          git clean -fd
+          git reset --hard
+          git clean -xfd -ff
+          rm -rf node_modules packages/*/node_modules packages/*/dist dist .nx/cache
 
       - name: Install dependencies for main branch
         uses: ./.github/workflows/actions/yarn-install
 
       - name: Build main branch dependencies
         run: |
+          npx nx reset
           npx nx build twenty-shared
           npx nx build twenty-emails
 
@@ -272,6 +275,7 @@ jobs:
 
       - name: Setup main branch database
         run: |
+          npx nx reset:env twenty-server
           # Function to set or update environment variable
           set_env_var() {
             local var_name="$1"
@@ -287,6 +291,9 @@ jobs:
           
           set_env_var "PG_DATABASE_URL" "postgres://postgres:postgres@localhost:5432/main_branch"
           set_env_var "NODE_PORT" "${{ env.MAIN_SERVER_PORT }}"
+          set_env_var "REDIS_URL" "redis://localhost:6379"
+          set_env_var "CLICKHOUSE_URL" "http://default:clickhousePassword@localhost:8123/twenty"
+          set_env_var "CLICKHOUSE_PASSWORD" "clickhousePassword"
           
           npx nx run twenty-server:database:init:prod
           npx nx run twenty-server:database:migrate:prod
