--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -15,9 +15,10 @@
     "typeorm": "../../node_modules/typeorm/.bin/typeorm"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^1.2.12",
-    "@ai-sdk/openai": "^1.3.22",
-    "@ai-sdk/xai": "1.2.15",
+    "@ai-sdk/anthropic": "^2.0.17",
+    "@ai-sdk/openai": "^2.0.30",
+    "@ai-sdk/provider-utils": "^3.0.9",
+    "@ai-sdk/xai": "^2.0.19",
     "@aws-sdk/client-lambda": "3.825.0",
     "@aws-sdk/client-s3": "3.825.0",
     "@aws-sdk/client-sts": "3.825.0",
@@ -77,7 +78,7 @@
     "@sentry/profiling-node": "9.26.0",
     "@sniptt/guards": "0.2.0",
     "addressparser": "1.0.1",
-    "ai": "^4.3.16",
+    "ai": "^5.0.44",
     "apollo-server-core": "3.13.0",
     "archiver": "7.0.1",
     "axios": "1.10.0",
@@ -186,7 +187,7 @@
     "unzipper": "^0.12.3",
     "uuid": "9.0.1",
     "vite-tsconfig-paths": "4.3.2",
-    "zod": "3.23.8",
+    "zod": "^4.1.11",
     "zod-to-json-schema": "^3.23.1"
   },
   "devDependencies": {
