--- a/packages/twenty-front/package.json
+++ b/packages/twenty-front/package.json
@@ -70,6 +70,7 @@
     "apollo-link-rest": "^0.9.0",
     "apollo-upload-client": "^17.0.0",
     "buffer": "^6.0.3",
+    "cron-parser": "5.1.1",
     "date-fns": "^2.30.0",
     "docx": "^9.1.0",
     "file-saver": "^2.0.5",
