--- a/packages/twenty-cli/package.json
+++ b/packages/twenty-cli/package.json
@@ -29,10 +29,7 @@
     "dotenv": "^16.4.0",
     "fs-extra": "^11.2.0",
     "inquirer": "^10.0.0",
-    "jsonc-parser": "^3.2.0",
-    "ora": "^8.0.0",
-    "yaml": "^2.4.0",
-    "zod": "^4.1.11"
+    "jsonc-parser": "^3.2.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.0",
