--- a/packages/twenty-cli/package.json
+++ b/packages/twenty-cli/package.json
@@ -29,12 +29,14 @@
     "dotenv": "^16.4.0",
     "fs-extra": "^11.2.0",
     "inquirer": "^10.0.0",
-    "jsonc-parser": "^3.2.0"
+    "jsonc-parser": "^3.2.0",
+    "lodash.kebabcase": "^4.1.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.0",
     "@types/inquirer": "^9.0.0",
     "@types/jest": "^29.5.0",
+    "@types/lodash.kebabcase": "^4.1.7",
     "@types/node": "^20.0.0",
     "jest": "^29.5.0",
     "tsx": "^4.7.0",
