Publish twenty-cli npm package

--- a/packages/twenty-cli/project.json
+++ b/packages/twenty-cli/project.json
@@ -1,9 +1,18 @@
 {
   "name": "twenty-cli",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "projectType": "application",
+  "projectType": "library",
   "tags": ["scope:cli"],
   "targets": {
+    "deploy": {
+      "executor": "nx:run-commands",
+      "cache": true,
+      "options": {
+        "cwd": "packages/twenty-cli",
+        "commands": ["npm publish --access public"]
+      },
+      "dependsOn": ["build"]
+    },
     "after-build": {
       "executor": "nx:run-commands",
       "cache": true,
