--- a/packages/twenty-cli/project.json
+++ b/packages/twenty-cli/project.json
@@ -1,7 +1,7 @@
 {
   "name": "twenty-cli",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "projectType": "library",
+  "projectType": "application",
   "tags": ["scope:cli"],
   "targets": {
     "deploy": {
