--- a/packages/twenty-website/tsconfig.json
+++ b/packages/twenty-website/tsconfig.json
@@ -22,6 +22,8 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/emotion-root-style-registry.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts",
+    "src/app/emotion-root-style-registry"
+  ],
   "exclude": ["node_modules"]
 }
