--- a/packages/twenty-server/package.json
+++ b/packages/twenty-server/package.json
@@ -64,7 +64,6 @@
     "@opentelemetry/exporter-metrics-otlp-http": "^0.200.0",
     "@opentelemetry/sdk-metrics": "^2.0.0",
     "@opentelemetry/sdk-node": "^0.202.0",
-    "@prettier/sync": "0.5.3",
     "@ptc-org/nestjs-query-core": "4.4.0",
     "@ptc-org/nestjs-query-graphql": "patch:@ptc-org/nestjs-query-graphql@4.2.0#./patches/@ptc-org+nestjs-query-graphql+4.2.0.patch",
     "@ptc-org/nestjs-query-typeorm": "4.2.1-alpha.2",
@@ -116,7 +115,6 @@
     "graphql-type-json": "0.3.2",
     "graphql-upload": "13.0.0",
     "graphql-yoga": "4.0.5",
-    "handlebars": "^4.7.8",
     "html-to-text": "^9.0.5",
     "imapflow": "1.0.187",
     "ioredis": "5.6.0",
@@ -124,7 +122,6 @@
     "json-schema": "0.4.0",
     "jsonc-eslint-parser": "2.4.0",
     "jsonwebtoken": "9.0.2",
-    "jwt-decode": "^4.0.0",
     "libphonenumber-js": "1.11.5",
     "lodash.camelcase": "4.3.0",
     "lodash.chunk": "4.2.0",
@@ -168,10 +165,8 @@
     "rxjs": "7.8.1",
     "semver": "7.6.3",
     "sharp": "0.32.6",
-    "slash": "5.1.0",
     "stripe": "17.3.1",
     "transliteration": "2.3.5",
-    "ts-morph": "^24.0.0",
     "tsconfig-paths": "^4.2.0",
     "tsdav": "^2.1.5",
     "tslib": "2.8.1",
@@ -180,8 +175,7 @@
     "unzipper": "^0.12.3",
     "uuid": "9.0.1",
     "vite-tsconfig-paths": "4.3.2",
-    "zod": "^4.1.11",
-    "zod-to-json-schema": "^3.23.1"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
@@ -197,7 +191,6 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.18.0",
     "@types/graphql-upload": "^8.0.12",
-    "@types/handlebars": "4.1.0",
     "@types/html-to-text": "^9.0.4",
     "@types/imapflow": "^1.0.21",
     "@types/lodash.chunk": "^4.2.9",
